--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Bienvenidos al universo Peregrina" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
